# sagemaker-ai-mcp-server

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml  uv-requirements.txt
.github/workflows/: deps-updates.yaml  pre-commit.yaml  tests.yaml
sagemaker_ai_mcp_server/: __init__.py  helpers.py  server.py
sagemaker_ai_mcp_server/helpers/: __init__.py  apps.py  domains.py  endpoints.py  jobs.py  mlflow_managed.py  model_cards.py  models.py  pipelines.py  profiles_spaces.py  utils.py
tests/: test_helpers.py  test_init.py  test_main.py  test_server.py
tests/helpers/: test_apps.py  test_domains.py  test_endpoints.py  test_jobs.py  test_mlflow_managed.py  test_model_cards.py  test_models.py  test_pipelines.py  test_profiles_spaces.py  test_utils.py
